testsuite/tests/gnatcheck_errors/invalid_lkql_rules_config/invalid_syntax.lkql
val rules = @{
    Goto_Statements,
}
